--- a/src/server/projects/detail/assessment.njk
+++ b/src/server/projects/detail/assessment.njk
@@ -8,9 +8,13 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">Add Service Standard update</h1>
-      
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       {% if error %}
         <div class="govuk-error-summary" data-module="govuk-error-summary">
           <div role="alert">
