--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -35,7 +35,7 @@
         </div>
       </form>
 
-      {% if isAuthenticated %}
+      {% if isAdmin %}
         <p class="govuk-body govuk-!-margin-bottom-6">
           <a href="/projects/add" class="govuk-link">Add new project</a>
         </p>
